# Embedded-System

adruino/wieee_car/: wieee_car.ino
getting-started-c/elevator-controller/: elevator.c  elevator.h  input.c  input.h  main.c  timer.c  timer.h
getting-started-c/pointers/: main.c  reverseAnArray.c  sumAllElements.c  swapTwoIntegers.c
getting-started-c/traffic-light-controller/: fsm.c  fsm.h  input.c  input.h  main.c  timer.c  timer.h
getting-started-cpp/01/: main.cpp
getting-started-cpp/01-basics/: main.cpp  note.txt
getting-started-cpp/02-calculator/: calculator.cpp
getting-started-cpp/calculator/: main.cpp
getting-started-cpp/rtos/: api.hpp  interface.cpp  interface.hpp  kernel.cpp  kernel.hpp  main.cpp  queue.hpp  scheduler.hpp  task.hpp
getting-started-cpp/rtos/api/: interface.hpp
getting-started-cpp/rtos/kernel/: kernel.cpp  kernel.hpp  scheduler.cpp  scheduler.hpp  task.hpp
getting-started-cpp/system-monitor/: cpu.cpp  cpu.h  main.cpp  memory.cpp  memory.h  system.cpp  system.h
getting-started-cpp/task_management/: CMakeLists.txt
getting-started-cpp/task_management/include/domain/: datetime.h  task.h
getting-started-cpp/task_management/src/: main.cpp
getting-started-cpp/task_management/src/domain/: datetime.cpp  task.cpp
getting-started-rust/basics/: Cargo.toml
getting-started-rust/basics/src/: data_type.rs  main.rs
getting-started-rust/compression/: Cargo.toml
getting-started-rust/compression/src/: main.rs
